[gd_scene load_steps=19 format=2]

[ext_resource path="res://systems/audio/Sound.tscn" type="PackedScene" id=1]
[ext_resource path="res://content/gadgets/condenser/Condenser.gd" type="Script" id=2]
[ext_resource path="res://content/sounds/Locations/Lift/OrbSpawn.wav" type="AudioStream" id=3]
[ext_resource path="res://content/gadgets/condenser/condenser_releaseanim12.png" type="Texture" id=4]
[ext_resource path="res://content/sounds/Bastards/ConsdenserActive.wav" type="AudioStream" id=5]
[ext_resource path="res://content/sounds/Bastards/Probe_04.wav" type="AudioStream" id=6]
[ext_resource path="res://content/sounds/Bastards/sfx_kick03.wav" type="AudioStream" id=7]
[ext_resource path="res://content/sounds/Bastards/magic.wav" type="AudioStream" id=8]
[ext_resource path="res://content/sounds/drops/waterTest_02.wav" type="AudioStream" id=9]
[ext_resource path="res://content/gadgets/condenser/condenser_releaseanim11.png" type="Texture" id=10]
[ext_resource path="res://content/sounds/drops/waterTest_03.wav" type="AudioStream" id=11]
[ext_resource path="res://content/sounds/drops/waterTest_01.wav" type="AudioStream" id=12]
[ext_resource path="res://content/gadgets/condenser/condenser_front.png" type="Texture" id=14]
[ext_resource path="res://content/shared/Usable.tscn" type="PackedScene" id=15]

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 10 )
region = Rect2( 0, 0, 36, 30 )

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 4 )
region = Rect2( 0, 0, 36, 30 )

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ SubResource( 4 ) ],
"loop": false,
"name": "release_1",
"speed": 1.0
}, {
"frames": [ SubResource( 3 ) ],
"loop": false,
"name": "release_2",
"speed": 1.0
}, {
"frames": [ ExtResource( 14 ) ],
"loop": false,
"name": "active",
"speed": 1.0
} ]

[sub_resource type="ParticlesMaterial" id=2]
emission_shape = 1
emission_sphere_radius = 4.0
flag_disable_z = true
spread = 180.0
gravity = Vector3( 0, -200, 0 )
orbit_velocity = 0.0
orbit_velocity_random = 0.0
color = Color( 0.376471, 0.807843, 0.54902, 0.705882 )

[node name="Condenser" type="Node2D" groups=["saveable"]]
script = ExtResource( 2 )

[node name="Sprite" type="AnimatedSprite" parent="."]
position = Vector2( 3, -11 )
frames = SubResource( 1 )
animation = "release_2"

[node name="ResourcePosition" type="Position2D" parent="."]
position = Vector2( -11, 0 )
__meta__ = {
"_gizmo_extents_": 3.0
}

[node name="FinishedParticles" type="Particles2D" parent="ResourcePosition"]
lifetime = 0.1
process_material = SubResource( 2 )

[node name="Usable" parent="." instance=ExtResource( 15 )]
position = Vector2( 0, -7 )

[node name="WaterSpawn" parent="." instance=ExtResource( 1 )]
stream = ExtResource( 3 )
volume_db = 7.866
pitch_scale = 1.65
bus = "Dome"
randomVolume = 0.0
randomPitch = 0.0
maxAudibleDistance = 160.0
minAudibleDistance = 30.0

[node name="WaterSpawn2" parent="WaterSpawn" instance=ExtResource( 1 )]
volume_db = 7.866
bus = "Dome"
randomVolume = 0.0
randomPitch = 0.0
maxAudibleDistance = 140.0
minAudibleDistance = 30.0
streams = [ ExtResource( 12 ), ExtResource( 9 ), ExtResource( 11 ) ]

[node name="WaterPickup" parent="." instance=ExtResource( 1 )]
stream = ExtResource( 6 )
volume_db = -6.554
pitch_scale = 0.75
bus = "Dome"
randomVolume = 0.0
randomPitch = 0.0

[node name="Active" parent="." instance=ExtResource( 1 )]
stream = ExtResource( 5 )
volume_db = -20.538
bus = "Dome"
maxAudibleDistance = 45.0
minAudibleDistance = 30.0
loop = true

[node name="Active2" parent="Active" instance=ExtResource( 1 )]
volume_db = -8.302
bus = "Dome"
maxAudibleDistance = 45.0
minAudibleDistance = 30.0
streams = [ ExtResource( 7 ) ]
loop = true

[node name="Amb" parent="." instance=ExtResource( 1 )]
stream = ExtResource( 8 )
volume_db = -3.933
bus = "Dome"
maxAudibleDistance = 45.0
minAudibleDistance = 30.0
loop = true
